# vscode-template

./: CMakeLists.txt  README.md  build.gradle.kts  go.mod  gradle.properties  package.json  settings.gradle  settings.gradle.kts
app/: build.gradle
app/src/main/java/started/: App.java
app/src/test/java/started/: AppTest.java
src/: Main.java  lib.py  main.cpp  main.dart  main.go  main.py  math.h
src/algorithm/: Reverse.java
src/example/: EServerSocket.java
src/main/java/: Main.java
src/main/kotlin/: Main.kt
src/test/java/: ExampleTestJava.java
src/test/kotlin/: ExampleTestKotlin.kt
